--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -95,12 +95,29 @@ services:
   frontend:
     restart: "no"
     ports:
-      - "5173:80"
+      - "5173:5173"
     build:
       context: ./frontend
+      dockerfile: Dockerfile.dev
       args:
         - VITE_API_URL=http://localhost:8000
         - NODE_ENV=development
+    develop:
+      watch:
+        - path: ./frontend/src
+          action: sync
+          target: /app/src
+        - path: ./frontend/public
+          action: sync
+          target: /app/public
+        - path: ./frontend/index.html
+          action: sync
+          target: /app/index.html
+        - path: ./frontend/vite.config.ts
+          action: sync
+          target: /app/vite.config.ts
+        - path: ./frontend/package.json
+          action: rebuild
 
   playwright:
     build:
