--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,11 @@ dependencies = [
     "pydantic-settings<3.0.0,>=2.2.1",
     "sentry-sdk[fastapi]<2.0.0,>=1.40.6",
     "pyjwt<3.0.0,>=2.8.0",
+    "google-auth<3.0.0,>=2.23.0",
+    "google-auth-oauthlib<2.0.0,>=1.1.0",
+    "google-auth-httplib2<1.0.0,>=0.2.0",
+    "google-api-python-client<3.0.0,>=2.100.0",
+    "cryptography<42.0.0,>=41.0.0",
 ]
 
 [tool.uv]
