Add unseen email transaction functionality
- Introduced the ability to filter and retrieve unseen email transactions for Gmail connections.
- Added new API endpoints for marking email transactions as seen and fetching unseen transactions.
- Updated the EmailTransaction model to include a 'seen' field, reflecting whether an email has been viewed by the user.
- Enhanced frontend components to support marking emails as seen and displaying unseen email transactions.
- Improved the email transactions dashboard to include filters for unseen emails and updated related schemas and types.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "google-auth-httplib2<1.0.0,>=0.2.0",
     "google-api-python-client<3.0.0,>=2.100.0",
     "cryptography<42.0.0,>=41.0.0",
+    "apscheduler>=3.10.4,<4.0.0",
 ]
 
 [tool.uv]
