--- a/docker-compose.lan.yml
+++ b/docker-compose.lan.yml
@@ -25,6 +25,10 @@ services:
       - POSTGRES_DB=app
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+      - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
+      - GOOGLE_REDIRECT_URI=http://localhost:8000/api/v1/gmail/callback
+      - GMAIL_ENCRYPTION_KEY=RM5wPkMFUCt2ElVbVHAMQoG4XnFcuS8rQ0hs2Tyw1og
     command: ["fastapi", "run", "--host", "0.0.0.0", "--port", "8000", "--reload", "app/main.py"]
 
   frontend:
@@ -41,9 +45,13 @@ services:
       - ./frontend/public:/app/public
       - ./frontend/index.html:/app/index.html
       - ./frontend/vite.config.ts:/app/vite.config.ts
+      - ./frontend/package.json:/app/package.json
+      - ./frontend/package-lock.json:/app/package-lock.json
       - ./frontend/tsconfig.json:/app/tsconfig.json
       - ./frontend/tsconfig.build.json:/app/tsconfig.build.json
       - ./frontend/tsconfig.node.json:/app/tsconfig.node.json
+      - frontend_node_modules:/app/node_modules
+    command: ["sh", "-c", "npm install && npm run dev -- --host 0.0.0.0"]
 
   adminer:
     image: adminer
@@ -57,3 +65,6 @@ services:
     ports:
       - "1080:1080"
       - "1025:1025"
+
+volumes:
+  frontend_node_modules:
