--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^3.26.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/react": "^11.14.0",
     "@tanstack/react-query": "^5.87.4",
     "@tanstack/react-query-devtools": "^5.87.3",
