--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,11 +19,13 @@
     "@tanstack/react-query": "^5.87.4",
     "@tanstack/react-query-devtools": "^5.87.3",
     "@tanstack/react-router": "^1.131.37",
+    "@types/react-date-range": "^1.4.10",
     "@types/react-datepicker": "^6.2.0",
     "axios": "1.11.0",
     "form-data": "4.0.4",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
+    "react-date-range": "^2.0.1",
     "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
     "react-error-boundary": "^6.0.0",
