Refactor Todos functionality and enhance completed todos feature
- Updated the DailyTodosView component to include a new API endpoint for retrieving completed/archived todos for a specific date.
- Introduced a new method in the TodosService to fetch completed todos, enhancing user experience by displaying completed tasks alongside daily todos.
- Refactored the TodoCardComponent to improve code structure and readability, ensuring better management of todo statuses and priorities.
- Enhanced the UI to visually differentiate completed todos, providing users with a clearer overview of their tasks.
- Updated Docker configuration to streamline the development environment.

--- a/docker-compose.lan.yml
+++ b/docker-compose.lan.yml
@@ -20,7 +20,7 @@ services:
       - SMTP_PORT=1025
       - SMTP_TLS=false
       - EMAILS_FROM_EMAIL=noreply@example.com
-      - POSTGRES_SERVER=host.docker.internal
+      - POSTGRES_SERVER=db
       - POSTGRES_PORT=5432
       - POSTGRES_DB=app
       - POSTGRES_USER=postgres
