Refactor Todos components for enhanced user experience and functionality
- Updated the TodoSchedulePicker and TodosKanban components to include a quick add feature for todos, allowing users to create new tasks directly within the UI.
- Improved the DailyTodosView component with placeholder data and adjusted stale time settings for better performance.
- Refactored the MilestoneList component to streamline todo management, replacing the previous modal form with an inline input for adding todos.
- Enhanced the Docker configuration by updating the GOOGLE_REDIRECT_URI for local development.
- Implemented query optimizations across various components to improve data fetching and user interaction.

--- a/docker-compose.lan.yml
+++ b/docker-compose.lan.yml
@@ -27,7 +27,7 @@ services:
       - POSTGRES_PASSWORD=postgres
       - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
       - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
-      - GOOGLE_REDIRECT_URI=http://fastapi-dev.local:8000/api/v1/gmail/callback
+      - GOOGLE_REDIRECT_URI=http://localhost:8000/api/v1/gmail/callback
       - GMAIL_ENCRYPTION_KEY=RM5wPkMFUCt2ElVbVHAMQoG4XnFcuS8rQ0hs2Tyw1og
     command: ["fastapi", "run", "--host", "0.0.0.0", "--port", "8000", "--reload", "app/main.py"]
 
